<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/glucoseTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/LabelFont"
        android:text="@string/glucose" />

    <TextView
        android:id="@+id/glucoseValueTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        style="@style/ValueFont"
        android:text="@string/value"/>

    <TextView
        android:id="@+id/glucoseTimestampTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        style="@style/ValueFont"
        android:text="@string/timestamp" />

    <Button
        android:id="@+id/glucoseValueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/value_btn" />

    <Button
        android:id="@+id/glucoseTimestampBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/timestamp_btn" />

    <Button
        android:id="@+id/glucoseSendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/send_measurement"/>

</LinearLayout>